--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
 
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;600;700&family=Anek+Malayalam:wght@400;600;700&display=swap" rel="stylesheet">
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Anek+Malayalam:wght@400;600;700&display=swap" rel="stylesheet">
+
 
   <!-- AOS Animation -->
   <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
@@ -21,7 +23,6 @@
       --secondary: #122f7a;
       --accent: #f3c13a;
       --light: #f8f9fa;
-      --dark: #0b132b;
     }
 
     body {
@@ -35,33 +36,30 @@
     /* Navbar */
     .navbar {
       background: linear-gradient(90deg, var(--primary), var(--secondary));
-      transition: background 0.4s ease, box-shadow 0.4s ease;
-      padding: 0.8rem 0;
+      transition: background 0.4s ease;
     }
 
     .navbar.scrolled {
       background: rgba(10, 25, 79, 0.95);
-      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
     }
 
     .navbar-brand img {
-      border-radius: 10px;
+      border-radius: 8px;
       transition: transform 0.3s ease;
     }
 
     .navbar-brand:hover img {
-      transform: scale(1.08);
+      transform: scale(1.05);
     }
 
-    .nav-link {
+    .navbar-nav .nav-link {
       color: #f8f9fa !important;
       font-weight: 500;
-      letter-spacing: 0.3px;
-      transition: color 0.3s ease;
-      padding: 0.5rem 1rem;
+      transition: color 0.2s ease;
     }
 
-    .nav-link:hover {
+    .navbar-nav .nav-link:hover {
       color: var(--accent) !important;
     }
 
@@ -71,93 +69,56 @@
       color: var(--primary);
       border-radius: 8px;
       font-weight: 600;
-      padding: 0.6rem 1.2rem;
+      box-shadow: 0 0 10px rgba(243,193,58,0.4);
       transition: all 0.3s ease;
-      box-shadow: 0 0 12px rgba(243,193,58,0.4);
     }
 
     .btn-primary:hover {
-      background: #ffdb66;
-      box-shadow: 0 0 18px rgba(243,193,58,0.7);
-      transform: translateY(-3px);
+      background: #ffda5c;
+      box-shadow: 0 0 15px rgba(243,193,58,0.7);
+      transform: translateY(-2px);
+    }
+
+    .btn-outline-secondary {
+      color: var(--accent);
+      border-color: var(--accent);
+    }
+
+    .btn-outline-secondary:hover {
+      background: var(--accent);
+      color: var(--primary);
     }
 
     /* Hero */
     .hero {
       background: linear-gradient(160deg, var(--secondary), var(--primary));
-      padding: 6rem 0 5rem;
+      padding: 5rem 0;
       text-align: center;
     }
 
     .hero h1 {
       color: var(--accent);
       font-weight: 700;
-      font-size: 2.5rem;
     }
 
     .hero p {
       color: #dfe6ff;
-      max-width: 600px;
-      margin: 0 auto 2rem;
     }
 
-    /* Examination Toppers */
-    .toppers-section {
-      background: var(--light);
-      color: var(--dark);
-    }
-
-    .toppers-section h2 {
-      color: var(--secondary);
-    }
-
-    .topper-card {
-      background: #ffffff;
-      border-radius: 14px;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
-      width: 160px;
-      text-align: center;
-      overflow: hidden;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-    }
-
-    .topper-card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 10px 20px rgba(0,0,0,0.15);
-    }
-
-    .topper-banner {
-      background: var(--accent);
+    .hero .card {
+      background: rgba(255,255,255,0.08);
+      border: 1px solid rgba(255,255,255,0.2);
       color: #fff;
-      font-weight: 600;
-      padding: 8px 0;
-    }
-
-    .topper-content {
-      padding: 16px 10px;
-    }
-
-    .topper-content h5 {
-      color: var(--primary);
-      font-weight: 700;
-    }
-
-    .topper-content p {
-      color: #555;
-      font-size: 15px;
     }
 
     /* About */
     #about {
       background: #ffffff;
       color: #333;
-      padding: 5rem 0;
     }
 
     #about h2 {
       color: var(--secondary);
-      font-weight: 700;
-      margin-bottom: 1rem;
     }
 
     #about img {
@@ -166,14 +127,13 @@
     }
 
     #about img:hover {
-      transform: scale(1.04);
+      transform: scale(1.03);
     }
 
     /* News */
     #news {
       background: linear-gradient(120deg, var(--primary), var(--secondary));
       color: white;
-      padding: 5rem 0;
     }
 
     #news .card {
@@ -184,8 +144,8 @@
     }
 
     #news .card:hover {
-      transform: translateY(-6px);
-      box-shadow: 0 8px 20px rgba(0,0,0,0.25);
+      transform: translateY(-5px);
+      box-shadow: 0 6px 15px rgba(0,0,0,0.3);
     }
 
     #news .card-title {
@@ -197,21 +157,18 @@
     #notifications {
       background: #f8f9fa;
       color: #333;
-      padding: 5rem 0;
     }
 
     #notifications h3 {
       color: var(--secondary);
     }
 
-    .list-group-item {
+    #notifications .list-group-item {
       border-left: 5px solid var(--accent);
       transition: background 0.2s ease;
-      border-radius: 8px;
-      margin-bottom: 6px;
     }
 
-    .list-group-item:hover {
+    #notifications .list-group-item:hover {
       background-color: #fff5d6;
     }
 
@@ -219,13 +176,11 @@
     footer {
       background: linear-gradient(90deg, var(--secondary), var(--primary));
       color: #fff;
-      padding: 2.5rem 0;
     }
 
     footer a {
       color: var(--accent);
       font-weight: 500;
-      text-decoration: none;
     }
 
     footer a:hover {
@@ -233,52 +188,26 @@
       text-decoration: underline;
     }
 
-    /* WhatsApp Button */
-    .whatsapp-float {
-      position: fixed;
-      width: 52px;
-      height: 52px;
-      bottom: 22px;
-      right: 22px;
-      background-color: #25d366;
-      color: #fff;
-      border-radius: 50%;
-      text-align: center;
-      box-shadow: 2px 2px 10px rgba(0,0,0,0.3);
-      z-index: 1000;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      transition: all 0.3s ease;
-    }
-
-    .whatsapp-float:hover {
-      transform: scale(1.1);
-      box-shadow: 4px 4px 12px rgba(0,0,0,0.4);
-    }
-
-    .whatsapp-float img {
-      width: 28px;
-      height: 28px;
-      filter: brightness(0) invert(1);
-    }
-
     @media (max-width: 768px) {
-      .hero h1 { font-size: 1.8rem; }
-      .btn-lg { font-size: 1rem; padding: 0.6rem 1rem; }
-      .navbar-nav .nav-link { padding: 0.5rem 0.8rem; }
+      .hero h1 {
+        font-size: 1.8rem;
+      }
+      .btn-lg {
+        font-size: 1rem;
+        padding: 0.6rem 1rem;
+      }
     }
   </style>
 </head>
 <body>
 
-<!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+<!-- NAVBAR -->
+<nav class="navbar navbar-expand-lg navbar-dark shadow-sm sticky-top">
   <div class="container">
     <a class="navbar-brand d-flex align-items-center gap-2" href="#">
       <img src="https://i.ibb.co/GmW5YpC/LOGO-NSM-copy.png" alt="NSM Logo" width="50">
       <div>
-        <div class="fw-bold text-uppercase">Noorussalam Madrasa</div>
+        <div class="fw-bold text-uppercase text-white">Noorussalam Madrasa</div>
         <small class="text-light">Kambippalam, Kerala Estate</small>
       </div>
     </a>
@@ -286,7 +215,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navMenu">
-      <ul class="navbar-nav ms-auto align-items-lg-center">
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item"><a class="nav-link active" href="#home">Home</a></li>
         <li class="nav-item"><a class="nav-link" href="faculties.html" target="_blank">Staff</a></li>
         <li class="nav-item"><a class="nav-link" href="idcard.html" target="_blank">ID Card</a></li>
@@ -298,25 +227,20 @@
         <li class="nav-item"><a class="nav-link" href="login.html" target="_blank">Login</a></li>
         <li class="nav-item"><a class="nav-link" href="contact.html" target="_blank">Contact</a></li>
       </ul>
-      <a href="student-zone.html" class="btn btn-primary ms-lg-3">Student Zone</a>
+      <a href="student-zone.html" class="btn btn-primary ms-lg-3">student zone</a>
     </div>
   </div>
 </nav>
 
-<!-- Hero -->
-<section id="home" class="hero text-white d-flex align-items-center" data-aos="fade-up">
-  <div class="container text-center">
-    <h1>Noorussalam Madrasa — Knowledge, Character & Service</h1>
-    <p>Combining traditional Islamic studies with modern education — preparing students for both Deen and Dunya.</p>
-    <div>
-      <a href="forms.html" class="btn btn-primary btn-lg m-2">Join Admissions</a>
-      <a href="#about" class="btn btn-outline-light btn-lg m-2">Learn More</a>
-    </div>
+<!-- HERO -->
+<section id="home" class="hero text-white" data-aos="fade-up">
+  <div class="container py-5">
+    <h1 class="display-5">Noorussalam Madrasa — Knowledge, Character & Service</h1>
+    <p class="lead mb-4">Combining traditional Islamic studies with modern education — preparing students for both Deen and Dunya.</p>
+    <a href="forms.html" class="btn btn-primary btn-lg m-2">Join Admissions</a>
+    <a href="#about" class="btn btn-outline-secondary btn-lg m-2">Learn More</a>
   </div>
 </section>
-
-<!-- The rest of your sections (Toppers, About, News, Notifications, Footer, WhatsApp, etc.) remain same — just paste below -->
-
 <!-- ===== EXAMINATION TOPPERS SECTION ===== -->
 <section class="toppers-section py-5 bg-light">
   <div class="container text-center" data-aos="fade-up">
@@ -676,8 +600,6 @@
 
 </body>
 </html>
-
-
 
 
 
