--- a/login.html
+++ b/login.html
@@ -9,42 +9,22 @@
   <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
 
   <style>
-    :root{
-      --accent:#0b5ea8;
-      --accent-alt:#03a87c;
-      --bg-dark:#0e2438;
-      --bg-light:#f7faff;
-      --text-dark:#0e2438;
-      --text-light:#ffffff;
-    }
-
-    *{box-sizing:border-box;transition:all .3s ease-in-out}
-    html,body{height:100%;margin:0;padding:0}
-    body{
-      font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial;
-      background:var(--bg-dark);
-      color:var(--text-light);
-      display:flex;align-items:center;justify-content:center;flex-direction:column;padding:20px;
-      animation:fadeIn 0.8s ease-in;
-    }
-
+    /* (same CSS you provided earlier) */
+    :root{--accent:#0b5ea8;--accent-alt:#03a87c;--bg-dark:#0e2438;--bg-light:#f7faff;--text-dark:#0e2438;--text-light:#ffffff}
+    *{box-sizing:border-box;transition:all .3s ease-in-out}html,body{height:100%;margin:0;padding:0}
+    body{font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial;background:var(--bg-dark);color:var(--text-light);display:flex;align-items:center;justify-content:center;flex-direction:column;padding:20px;animation:fadeIn 0.8s ease-in}
     @keyframes fadeIn{from{opacity:0;transform:translateY(10px)}to{opacity:1;transform:translateY(0)}}
-
     .bg-shapes{position:fixed;inset:0;pointer-events:none;z-index:0;overflow:hidden}
     .shape{position:absolute;border-radius:50%;filter:blur(60px);opacity:0.4;animation:float 10s ease-in-out infinite}
     .shape.s1{width:380px;height:380px;left:-80px;top:10%;background:linear-gradient(45deg,var(--accent),var(--accent-alt))}
     .shape.s2{width:280px;height:280px;right:-60px;bottom:5%;background:linear-gradient(135deg,#a24ff0,var(--accent));animation-duration:12s}
     @keyframes float{0%,100%{transform:translateY(0)}50%{transform:translateY(-24px)}}
-
-    .container{width:100%;max-width:480px;z-index:1;background:rgba(255,255,255,0.05);backdrop-filter:blur(10px);border-radius:20px;padding:24px;box-shadow:0 8px 24px rgba(0,0,0,0.4);position:relative;overflow:hidden;}
-
-    .toggle-mode{position:absolute;top:14px;right:14px;cursor:pointer;background:transparent;border:none;color:inherit;font-size:20px;opacity:0.9;}
-
+    .container{width:100%;max-width:480px;z-index:1;background:rgba(255,255,255,0.05);backdrop-filter:blur(10px);border-radius:20px;padding:24px;box-shadow:0 8px 24px rgba(0,0,0,0.4);position:relative;overflow:hidden}
+    .toggle-mode{position:absolute;top:14px;right:14px;cursor:pointer;background:transparent;border:none;color:inherit;font-size:20px;opacity:0.9}
     .logo{text-align:center;margin-bottom:20px;margin-top:12px}
     .logo .mark{width:64px;height:64px;margin:auto;border-radius:14px;background:linear-gradient(135deg,var(--accent),var(--accent-alt));display:flex;align-items:center;justify-content:center;color:white;font-weight:700;box-shadow:0 6px 18px rgba(11,94,168,0.25);font-size:20px}
     .logo h1{margin:10px 0 0;font-size:20px}
     .logo p{font-size:14px;opacity:0.85;margin:4px 0 20px}
-
     form{display:flex;flex-direction:column;gap:14px}
     .field{position:relative}
     input[type=text], input[type=password]{width:100%;padding:14px 44px 14px 14px;border-radius:12px;border:1px solid rgba(255,255,255,0.1);background:transparent;color:inherit;font-size:15px;outline:none;backdrop-filter:blur(6px)}
@@ -52,20 +32,14 @@
     label.floating{position:absolute;left:14px;top:12px;pointer-events:none;font-size:13px;color:rgba(255,255,255,0.7);transition:transform .14s ease, font-size .14s, top .14s}
     input:not(:placeholder-shown)+label.floating, input:focus+label.floating{transform:translateY(-10px);font-size:12px;top:6px;color:#fff}
     .icon{position:absolute;right:12px;top:50%;transform:translateY(-50%);opacity:0.9}
-
     .btn{padding:12px 16px;border-radius:12px;border:none;background:linear-gradient(90deg,var(--accent),var(--accent-alt));color:white;font-weight:600;cursor:pointer;width:100%;}
     .btn:active{transform:translateY(1px)}
-
     .row{display:flex;justify-content:space-between;align-items:center;flex-wrap:wrap;font-size:13px}
     .checkbox{display:flex;align-items:center;gap:6px}
-
     .alt{margin-top:16px;text-align:center;font-size:13px;color:rgba(255,255,255,0.8)}
     .alt a{color:var(--accent-alt);text-decoration:none;font-weight:600}
-
     footer.small{text-align:center;margin-top:12px;font-size:12px;color:rgba(255,255,255,0.6)}
-
     @media(max-width:600px){body{padding:16px;}.container{padding:20px;}input[type=text], input[type=password]{font-size:14px;}}
-
     body.light{background:var(--bg-light);color:var(--text-dark)}
     body.light .container{background:rgba(0,0,0,0.04);color:var(--text-dark)}
     body.light input{color:var(--text-dark);border-color:rgba(0,0,0,0.1)}
@@ -88,46 +62,37 @@
 
     <form id="loginForm">
       <div class="field">
-        <input id="user" type="text" placeholder=" " required>
+        <input id="user" name="user" type="text" placeholder=" " required>
         <label class="floating" for="user">Madrasa ID or Email</label>
         <span class="icon"><i class='bx bx-user'></i></span>
       </div>
 
       <div class="field">
-        <input id="password" type="password" placeholder=" " required>
+        <input id="password" name="password" type="password" placeholder=" " required>
         <label class="floating" for="password">Password</label>
         <span class="icon password-toggle" id="togglePwd"><i class='bx bx-hide'></i></span>
       </div>
 
       <div class="row">
-        <label class="checkbox"><input type="checkbox"> Remember me</label>
+        <label class="checkbox"><input id="remember" type="checkbox"> Remember me</label>
         <a href="#" style="color:var(--accent-alt);text-decoration:none">Forgot?</a>
       </div>
 
       <button type="submit" class="btn"><i class='bx bxs-lock-alt'></i> Sign In</button>
-      <div class="alt">Don't have an account? <a href="#">Register</a></div>
-      <footer class="small">© Noorussalam Madrasa 2025</footer>
+      <div class="alt">Don't have an account? <a href="register.html">Register</a></div>
+      <footer class="small">© Noorussalam Madrasa <span id="yr"></span></footer>
     </form>
   </div>
 
   <script>
+    document.getElementById('yr').textContent = new Date().getFullYear();
+
     const pwd=document.getElementById('password');
     const toggle=document.getElementById('togglePwd');
     toggle.addEventListener('click',()=>{
       const icon=toggle.querySelector('i');
       if(pwd.type==='password'){pwd.type='text';icon.className='bx bx-show';}
       else{pwd.type='password';icon.className='bx bx-hide';}
-    });
-
-    const form=document.getElementById('loginForm');
-    form.addEventListener('submit',e=>{
-      e.preventDefault();
-      const btn=form.querySelector('.btn');
-      btn.disabled=true;btn.innerHTML='<i class="bx bx-loader-circle bx-spin"></i> Signing in...';
-      setTimeout(()=>{
-        btn.innerHTML='<i class="bx bxs-check-circle"></i> Signed in';
-        btn.style.background='linear-gradient(90deg,#22c55e,#06b6d4)';
-      },1000);
     });
 
     const toggleMode=document.getElementById('toggleMode');
@@ -137,6 +102,62 @@
       if(document.body.classList.contains('light')) icon.className='bx bx-moon';
       else icon.className='bx bx-sun';
     });
+
+    // === LOGIN logic ===
+    const scriptURL = "https://script.google.com/macros/s/AKfycbwZB8o9K_C5BDQkHouXx9z8o1Roeq28ByO-qZPImeC9hdtQRkS5mBpSMQJXsLkLB709/exec"; // <<-- replace
+
+    const form=document.getElementById('loginForm');
+    form.addEventListener('submit', async e => {
+      e.preventDefault();
+      const user = document.getElementById('user').value.trim();
+      const password = document.getElementById('password').value.trim();
+      const remember = document.getElementById('remember').checked;
+      const btn=form.querySelector('.btn');
+      btn.disabled=true;
+      btn.innerHTML='<i class="bx bx-loader-circle bx-spin"></i> Signing in...';
+
+      try {
+        // Try login (server checks both student and admin)
+        const res = await fetch(scriptURL, {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ action:"login", username: user, password: password })
+        });
+        const result = await res.json();
+
+        if (result.success) {
+          // Save details locally
+          localStorage.setItem("username", result.username || user);
+          localStorage.setItem("role", result.role || "student");
+          if(result.fullname) localStorage.setItem("fullname", result.fullname);
+          if(result.class) localStorage.setItem("class", result.class);
+          if(result.admission) localStorage.setItem("admission", result.admission);
+          if(result.email) localStorage.setItem("email", result.email);
+
+          if (remember) {
+            // optionally persist longer (already localStorage persists)
+          }
+
+          btn.innerHTML='<i class="bx bxs-check-circle"></i> Success!';
+          btn.style.background='linear-gradient(90deg,#22c55e,#06b6d4)';
+          setTimeout(()=>{
+            if(result.role==="admin") window.location.href="admin-dashboard.html";
+            else window.location.href="student-dashboard.html";
+          },900);
+        } else {
+          btn.disabled=false;
+          btn.innerHTML='<i class="bx bx-error-circle"></i> Invalid Login';
+          btn.style.background='linear-gradient(90deg,#ef4444,#dc2626)';
+          setTimeout(()=>{ btn.innerHTML='<i class="bx bxs-lock-alt"></i> Sign In'; btn.style.background='linear-gradient(90deg,#0b5ea8,#03a87c)'; },1400);
+        }
+      } catch(err) {
+        console.error(err);
+        btn.disabled=false;
+        btn.innerHTML='<i class="bx bx-error"></i> Error';
+        setTimeout(()=>{ btn.innerHTML='<i class="bx bxs-lock-alt"></i> Sign In'; btn.style.background='linear-gradient(90deg,#0b5ea8,#03a87c)'; },1400);
+      }
+    });
   </script>
+
 </body>
 </html>
