--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -34,7 +34,7 @@
   </div>
 
 <script>
-const scriptURL = "YOUR_WEB_APP_URL_HERE";
+const scriptURL = "https://script.google.com/macros/s/AKfycbyCpTX0hO04d0O-8e1Hqe7MFNmjY5KCWxCxi5MqE5xfmRbu4blwfhWLaZxhEzv0xpwR/exec";
 
 if(!localStorage.getItem('role') || localStorage.getItem('role')!=='admin') location.href='login.html';
 
