--- a/login.html
+++ b/login.html
@@ -3,222 +3,221 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Noorussalam Madrasa — Student Portal Login</title>
+  <title>Noorussalam Madrasa — Login</title>
 
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+  <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
   <style>
-    :root {
-      --bg: #f0f4ff;
-      --card-bg: rgba(255,255,255,0.8);
-      --text: #1e293b;
-      --accent: #2563eb;
-      --accent-alt: #1e40af;
-      --error: #ef4444;
+    :root{
+      --accent:#0b5ea8;
+      --accent-alt:#03a87c;
+      --bg-dark:#0e2438;
+      --bg-light:#f7faff;
+      --text-dark:#0e2438;
+      --text-light:#ffffff
     }
-    body.dark {
-      --bg: #0f172a;
-      --card-bg: rgba(30,41,59,0.9);
-      --text: #e2e8f0;
-      --accent: #60a5fa;
-      --accent-alt: #3b82f6;
+    *{box-sizing:border-box;transition:all .3s ease-in-out}
+    html,body{height:100%;margin:0;padding:0}
+    body{
+      font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial;
+      background:var(--bg-dark);
+      color:var(--text-light);
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      flex-direction:column;
+      padding:20px;
+      animation:fadeIn 0.8s ease-in;
     }
+    @keyframes fadeIn{from{opacity:0;transform:translateY(10px)}to{opacity:1;transform:translateY(0)}}
+    .bg-shapes{position:fixed;inset:0;pointer-events:none;z-index:0;overflow:hidden}
+    .shape{position:absolute;border-radius:50%;filter:blur(60px);opacity:0.4;animation:float 10s ease-in-out infinite}
+    .shape.s1{width:380px;height:380px;left:-80px;top:10%;background:linear-gradient(45deg,var(--accent),var(--accent-alt))}
+    .shape.s2{width:280px;height:280px;right:-60px;bottom:5%;background:linear-gradient(135deg,#a24ff0,var(--accent));animation-duration:12s}
+    @keyframes float{0%,100%{transform:translateY(0)}50%{transform:translateY(-24px)}}
+    .container{
+      width:100%;
+      max-width:480px;
+      z-index:1;
+      background:rgba(255,255,255,0.05);
+      backdrop-filter:blur(10px);
+      border-radius:20px;
+      padding:24px;
+      box-shadow:0 8px 24px rgba(0,0,0,0.4);
+      position:relative;
+      overflow:hidden;
+    }
+    .toggle-mode{position:absolute;top:14px;right:14px;cursor:pointer;background:transparent;border:none;color:inherit;font-size:20px;opacity:0.9}
+    .logo{text-align:center;margin-bottom:20px;margin-top:12px}
+    .logo .mark{width:64px;height:64px;margin:auto;border-radius:14px;background:linear-gradient(135deg,var(--accent),var(--accent-alt));display:flex;align-items:center;justify-content:center;color:white;font-weight:700;box-shadow:0 6px 18px rgba(11,94,168,0.25);font-size:20px}
+    .logo h1{margin:10px 0 0;font-size:20px}
+    .logo p{font-size:14px;opacity:0.85;margin:4px 0 20px}
+    form{display:flex;flex-direction:column;gap:14px}
+    .field{position:relative}
+    input[type=text],input[type=password]{
+      width:100%;
+      padding:14px 44px 14px 14px;
+      border-radius:12px;
+      border:1px solid rgba(255,255,255,0.1);
+      background:transparent;
+      color:inherit;
+      font-size:15px;
+      outline:none;
+      backdrop-filter:blur(6px);
+    }
+    input:focus{border-color:var(--accent-alt)}
+    label.floating{position:absolute;left:14px;top:12px;pointer-events:none;font-size:13px;color:rgba(255,255,255,0.7);transition:transform .14s ease, font-size .14s, top .14s}
+    input:not(:placeholder-shown)+label.floating,input:focus+label.floating{transform:translateY(-10px);font-size:12px;top:6px;color:#fff}
+    .icon{position:absolute;right:12px;top:50%;transform:translateY(-50%);opacity:0.9}
+    .btn{padding:12px 16px;border-radius:12px;border:none;background:linear-gradient(90deg,var(--accent),var(--accent-alt));color:white;font-weight:600;cursor:pointer;width:100%;}
+    .btn:active{transform:translateY(1px)}
+    .row{display:flex;justify-content:space-between;align-items:center;flex-wrap:wrap;font-size:13px}
+    .checkbox{display:flex;align-items:center;gap:6px}
+    .alt{margin-top:16px;text-align:center;font-size:13px;color:rgba(255,255,255,0.8)}
+    .alt a{color:var(--accent-alt);text-decoration:none;font-weight:600}
+    footer.small{text-align:center;margin-top:12px;font-size:12px;color:rgba(255,255,255,0.6)}
 
-    body {
-      margin: 0;
-      font-family: 'Inter', sans-serif;
-      background: var(--bg);
-      color: var(--text);
-      height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      transition: background 0.4s, color 0.4s;
+    /* BACK TO HOME button */
+    .back-home{
+      display:inline-block;
+      margin-top:18px;
+      padding:10px 20px;
+      background:linear-gradient(90deg,var(--accent-alt),var(--accent));
+      color:#fff;
+      text-decoration:none;
+      font-weight:600;
+      border-radius:12px;
+      text-align:center;
+      width:100%;
     }
-
-    .container {
-      background: var(--card-bg);
-      backdrop-filter: blur(16px);
-      border-radius: 16px;
-      box-shadow: 0 8px 24px rgba(0,0,0,0.15);
-      padding: 2rem;
-      width: 90%;
-      max-width: 380px;
-      text-align: center;
-      animation: slideUp 0.6s ease-in-out;
-      transition: background 0.4s;
+    .back-home:hover{opacity:0.9;transform:translateY(-2px)}
+    
+    @media(max-width:600px){
+      body{padding:16px;}
+      .container{padding:20px;}
+      input[type=text],input[type=password]{font-size:14px;}
     }
-    @keyframes slideUp {
-      from { opacity: 0; transform: translateY(40px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
-    h2 {
-      margin-bottom: 1rem;
-      font-weight: 600;
-    }
-    .input-group {
-      position: relative;
-      margin-bottom: 1.4rem;
-    }
-    .input-group input {
-      width: 100%;
-      padding: 0.9rem 2.6rem 0.9rem 1rem;
-      border: 1px solid rgba(0,0,0,0.1);
-      border-radius: 8px;
-      font-size: 1rem;
-      background: transparent;
-      color: var(--text);
-      outline: none;
-      transition: border 0.3s;
-    }
-    .input-group input:focus {
-      border-color: var(--accent);
-    }
-    .input-group i {
-      position: absolute;
-      top: 50%;
-      right: 0.8rem;
-      transform: translateY(-50%);
-      color: var(--accent);
-      cursor: pointer;
-    }
-
-    .btn {
-      width: 100%;
-      background: var(--accent);
-      color: #fff;
-      border: none;
-      padding: 0.9rem;
-      border-radius: 8px;
-      font-weight: 600;
-      cursor: pointer;
-      transition: background 0.3s, transform 0.2s;
-    }
-    .btn:hover {
-      background: var(--accent-alt);
-      transform: translateY(-2px);
-    }
-    .error-msg {
-      color: var(--error);
-      font-size: 13px;
-      margin-top: -10px;
-      margin-bottom: 10px;
-      min-height: 16px;
-    }
-    .footer {
-      margin-top: 1rem;
-      font-size: 0.9rem;
-    }
-    .footer a {
-      color: var(--accent-alt);
-      text-decoration: none;
-    }
-
-    #themeToggle {
-      position: absolute;
-      top: 1rem;
-      right: 1rem;
-      font-size: 1.3rem;
-      cursor: pointer;
-      color: var(--accent);
-      transition: transform 0.3s;
-    }
-    #themeToggle:hover {
-      transform: rotate(20deg);
-    }
-
-    @media (max-width: 480px) {
-      .container { padding: 1.6rem; }
-    }
-    input:-webkit-autofill {
-      -webkit-box-shadow: 0 0 0px 1000px transparent inset;
-      box-shadow: 0 0 0px 1000px transparent inset;
-      -webkit-text-fill-color: inherit;
-    }
+    body.light{background:var(--bg-light);color:var(--text-dark)}
+    body.light .container{background:rgba(0,0,0,0.04);color:var(--text-dark)}
+    body.light input{color:var(--text-dark);border-color:rgba(0,0,0,0.1)}
+    body.light .btn{color:#fff}
   </style>
 </head>
 <body>
-  <i id="themeToggle" class="bx bx-moon"></i>
+  <div class="bg-shapes">
+    <div class="shape s1"></div>
+    <div class="shape s2"></div>
+  </div>
 
   <div class="container">
-    <h2>Student Login</h2>
+    <button class="toggle-mode" id="toggleMode" title="Toggle light/dark mode"><i class='bx bx-sun'></i></button>
 
-    <div class="input-group">
-      <input type="text" id="username" placeholder="Username" autocomplete="username" />
-      <i class="bx bx-user"></i>
+    <div class="logo">
+      <div class="mark">NS</div>
+      <h1>Noorussalam Madrasa</h1>
+      <p>Kambippalam — Student Portal</p>
     </div>
 
-    <div class="input-group">
-      <input type="password" id="password" placeholder="Password" autocomplete="current-password" />
-      <i class="bx bx-hide" id="togglePassword" title="Show/Hide password"></i>
-    </div>
+    <form id="loginForm">
+      <div class="field">
+        <input id="user" name="user" type="text" placeholder=" " required>
+        <label class="floating" for="user">Madrasa ID or Email</label>
+        <span class="icon"><i class='bx bx-user'></i></span>
+      </div>
 
-    <p id="loginMessage" class="error-msg"></p>
+      <div class="field">
+        <input id="password" name="password" type="password" placeholder=" " required>
+        <label class="floating" for="password">Password</label>
+        <span class="icon password-toggle" id="togglePwd"><i class='bx bx-hide'></i></span>
+      </div>
 
-    <button id="loginBtn" class="btn">Login</button>
+      <div class="row">
+        <label class="checkbox"><input id="remember" type="checkbox"> Remember me</label>
+        <a href="#" style="color:var(--accent-alt);text-decoration:none">Forgot?</a>
+      </div>
 
-    <div class="footer">
-      <a href="index.html">← Back to Home</a>
-    </div>
+      <button type="submit" class="btn"><i class='bx bxs-lock-alt'></i> Sign In</button>
+
+      <div class="alt">Don't have an account? <a href="register.html">Register</a></div>
+
+      <!-- BACK TO HOME BUTTON -->
+      <a href="index.html" class="back-home"><i class='bx bx-home'></i> Back to Home</a>
+
+      <footer class="small">© Noorussalam Madrasa <span id="yr"></span></footer>
+    </form>
   </div>
 
   <script>
-    // Theme toggle
-    const toggle = document.getElementById('themeToggle');
-    toggle.addEventListener('click', () => {
-      document.body.classList.toggle('dark');
-      toggle.classList.toggle('bx-moon');
-      toggle.classList.toggle('bx-sun');
+    document.getElementById('yr').textContent = new Date().getFullYear();
+
+    const pwd=document.getElementById('password');
+    const toggle=document.getElementById('togglePwd');
+    toggle.addEventListener('click',()=>{
+      const icon=toggle.querySelector('i');
+      if(pwd.type==='password'){pwd.type='text';icon.className='bx bx-show';}
+      else{pwd.type='password';icon.className='bx bx-hide';}
     });
 
-    // Password show/hide
-    const togglePassword = document.getElementById('togglePassword');
-    const passwordInput = document.getElementById('password');
-    togglePassword.addEventListener('click', () => {
-      const type = passwordInput.getAttribute('type') === 'password' ? 'text' : 'password';
-      passwordInput.setAttribute('type', type);
-      togglePassword.classList.toggle('bx-show');
-      togglePassword.classList.toggle('bx-hide');
+    const toggleMode=document.getElementById('toggleMode');
+    toggleMode.addEventListener('click',()=>{
+      document.body.classList.toggle('light');
+      const icon=toggleMode.querySelector('i');
+      if(document.body.classList.contains('light')) icon.className='bx bx-moon';
+      else icon.className='bx bx-sun';
     });
 
-    // Login function
-    const btn = document.getElementById('loginBtn');
-    btn.addEventListener('click', async () => {
-      const username = document.getElementById('username').value.trim();
+    // === LOGIN logic ===
+    const scriptURL = "https://script.google.com/macros/s/AKfycbwZB8o9K_C5BDQkHouXx9z8o1Roeq28ByO-qZPImeC9hdtQRkS5mBpSMQJXsLkLB709/exec"; // replace if needed
+    const form=document.getElementById('loginForm');
+
+    form.addEventListener('submit', async e => {
+      e.preventDefault();
+      const user = document.getElementById('user').value.trim();
       const password = document.getElementById('password').value.trim();
-      const msg = document.getElementById('loginMessage');
-      msg.textContent = '';
+      const remember = document.getElementById('remember').checked;
+      const btn=form.querySelector('.btn');
 
-      if (!username || !password) {
-        msg.textContent = "Please enter both username and password.";
-        return;
-      }
-
-      btn.disabled = true;
-      btn.textContent = "Checking...";
+      btn.disabled=true;
+      btn.innerHTML='<i class="bx bx-loader-circle bx-spin"></i> Signing in...';
 
       try {
-        const response = await fetch('https://script.google.com/macros/s/AKfycbwRdsDMdWdrjWPbYdtoCj-9IyrKrYpACmX_GtuKZ_ma1DaGCoWJOaVRRBdYsXhUpwg4/exec', {
-          method: 'POST',
-          body: new URLSearchParams({ username, password })
+        const res = await fetch(scriptURL, {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ action:"login", username: user, password: password })
         });
-        const result = await response.json();
+        const result = await res.json();
 
         if (result.success) {
-          btn.textContent = "Success!";
-          localStorage.setItem("madrasaUser", JSON.stringify(result.user));
-          setTimeout(() => window.location.href = "dashboard.html", 800);
+          localStorage.setItem("username", result.username || user);
+          localStorage.setItem("role", result.role || "student");
+          if(result.fullname) localStorage.setItem("fullname", result.fullname);
+          if(result.class) localStorage.setItem("class", result.class);
+          if(result.admission) localStorage.setItem("admission", result.admission);
+
+          btn.innerHTML='<i class="bx bxs-check-circle"></i> Success!';
+          btn.style.background='linear-gradient(90deg,#22c55e,#06b6d4)';
+          setTimeout(()=>{
+            if(result.role==="admin") window.location.href="admin-dashboard.html";
+            else window.location.href="student-dashboard.html";
+          },900);
         } else {
-          msg.textContent = result.message || "Invalid username or password.";
-          btn.textContent = "Login";
-          btn.disabled = false;
+          btn.disabled=false;
+          btn.innerHTML='<i class="bx bx-error-circle"></i> Invalid Login';
+          btn.style.background='linear-gradient(90deg,#ef4444,#dc2626)';
+          setTimeout(()=>{
+            btn.innerHTML='<i class="bx bxs-lock-alt"></i> Sign In';
+            btn.style.background='linear-gradient(90deg,#0b5ea8,#03a87c)';
+          },1400);
         }
-      } catch (e) {
-        msg.textContent = "Network error. Please try again.";
-        btn.textContent = "Login";
-        btn.disabled = false;
+      } catch(err) {
+        console.error(err);
+        btn.disabled=false;
+        btn.innerHTML='<i class="bx bx-error"></i> Error';
+        setTimeout(()=>{
+          btn.innerHTML='<i class="bx bxs-lock-alt"></i> Sign In';
+          btn.style.background='linear-gradient(90deg,#0b5ea8,#03a87c)';
+        },1400);
       }
     });
   </script>
